--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -33,10 +33,12 @@
             </errors>
         </specialSources>
     </loggingConfiguration>
-    <appSettings>
-    	<add key="IPageInfoDAO" value="BS.Common.Dao.Cache.PageCacheDAO, BSFramework" />
+    <appSettings>        
+        <add key="AjaxBasePkg" value="BS.Larco.Ajax" />
+        <add key="IPageInfoDAO" value="BS.Common.Dao.Cache.PageCacheDAO, BSFramework" />
         <add key="ICatalogDAO" value="BS.Common.Dao.Sql.CatalogSqlDAO, BSFramework" />
         <add key="PageInfo" value="BS.Common.Ajax.PageInfo, BSFramework" />
+        <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />        
     </appSettings>
     <system.web>
         <customErrors mode="Off" />
