--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -11,7 +11,7 @@
             <add fileName="D:\\Temp\\Logs\\Larco.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
         </listeners>
         <formatters>
-            <add template="{timestamp(local)},&quot;{category}&quot;,&quot;{priority}&quot;,&quot;{message}&quot;,{eventid},&quot;{severity}&quot;,&quot;{title}&quot;,{machine},&quot;{dictionary({value})}&quot;" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
+            <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)},&quot;{category}&quot;,&quot;{priority}&quot;,&quot;{message}&quot;,{eventid},&quot;{severity}&quot;,&quot;{title}&quot;,{machine},&quot;{dictionary({value})}&quot;" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
         </formatters>
         <categorySources>
             <add switchValue="All" name="All Events">
@@ -36,9 +36,11 @@
     <appSettings>        
         <add key="AjaxBasePkg" value="BS.Larco.Ajax" />
         <add key="IPageInfoDAO" value="BS.Common.Dao.Cache.PageCacheDAO, BSFramework" />
-        <add key="ICatalogDAO" value="BS.Common.Dao.Sql.CatalogSqlDAO, BSFramework" />
+        <add key="ICatalogDAO" value="BS.Common.Dao.Cache.CatalogCacheDAO, BSFramework" />
+        <!--<add key="ICatalogDAO" value="BS.Common.Dao.Sql.CatalogSqlDAO, BSFramework" />-->
         <add key="PageInfo" value="BS.Common.Ajax.PageInfo, BSFramework" />
-        <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />        
+        <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />
+        <add key="CatalogCacheTables" value="tblClientes,tblProductos"/>        
     </appSettings>
     <system.web>
         <customErrors mode="Off" />
