--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -4,7 +4,7 @@
         <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </configSections>
     <connectionStrings>
-        <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP150071W7E64\SQLSERVER2008R2;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
+        <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP150071W7E64\SQLSERVER2008R2;Initial Catalog=LarcoOld;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
     </connectionStrings>
     <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="System" logWarningsWhenNoCategoriesMatch="true">
         <listeners>
