--- a/Larco/Larco.csproj
+++ b/Larco/Larco.csproj
@@ -94,6 +94,7 @@
     <Content Include="Admin\RefreshCache.aspx" />
     <Content Include="Catalogos\Clientes.aspx" />
     <Content Include="Catalogos\Empleados.aspx" />
+    <Content Include="Catalogos\Materiales.aspx" />
     <Content Include="Catalogos\MenuEditor.aspx" />
     <Content Include="Catalogos\Productos.aspx" />
     <Content Include="Catalogos\Rutas.aspx" />
@@ -120,11 +121,14 @@
     <Content Include="Admin\Preview.aspx" />
     <Content Include="Images\ui-anim_basic_16x16.gif" />
     <Content Include="InvalidAccess.aspx" />
+    <Content Include="Inventarios\Salidas.aspx" />
     <Content Include="Inventarios\Entradas.aspx" />
     <Content Include="Logon.aspx" />
     <Content Include="Logout.aspx" />
+    <Content Include="Reportes\EntradasAlmacen.aspx" />
     <Content Include="Reportes\RelacionFechaEntrega.aspx" />
     <Content Include="Reportes\RelacionOrdenCompra.aspx" />
+    <Content Include="Reportes\SalidasAlmacen.aspx" />
     <Content Include="Reportes\ScrapDinero.aspx" />
     <Content Include="Reportes\ScrapPorcentaje.aspx" />
     <Content Include="Scripts\common.js" />
@@ -229,6 +233,13 @@
     <Compile Include="Catalogos\Empleados.aspx.designer.cs">
       <DependentUpon>Empleados.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Catalogos\Materiales.aspx.cs">
+      <DependentUpon>Materiales.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Catalogos\Materiales.aspx.designer.cs">
+      <DependentUpon>Materiales.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Catalogos\MenuEditor.aspx.cs">
       <DependentUpon>MenuEditor.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -329,6 +340,13 @@
     <Compile Include="InvalidAccess.aspx.designer.cs">
       <DependentUpon>InvalidAccess.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Inventarios\Salidas.aspx.cs">
+      <DependentUpon>Salidas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inventarios\Salidas.aspx.designer.cs">
+      <DependentUpon>Salidas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Inventarios\Entradas.aspx.cs">
       <DependentUpon>Entradas.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -351,6 +369,13 @@
       <DependentUpon>Logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes\EntradasAlmacen.aspx.cs">
+      <DependentUpon>EntradasAlmacen.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reportes\EntradasAlmacen.aspx.designer.cs">
+      <DependentUpon>EntradasAlmacen.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\RelacionFechaEntrega.aspx.cs">
       <DependentUpon>RelacionFechaEntrega.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -364,6 +389,13 @@
     </Compile>
     <Compile Include="Reportes\RelacionOrdenCompra.aspx.designer.cs">
       <DependentUpon>RelacionOrdenCompra.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\SalidasAlmacen.aspx.cs">
+      <DependentUpon>SalidasAlmacen.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reportes\SalidasAlmacen.aspx.designer.cs">
+      <DependentUpon>SalidasAlmacen.aspx</DependentUpon>
     </Compile>
     <Compile Include="Reportes\ScrapDinero.aspx.cs">
       <DependentUpon>ScrapDinero.aspx</DependentUpon>
