--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -5,6 +5,7 @@
     </configSections>
     <connectionStrings>
         <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP150071W7E64\SQLSERVER2008R2;Initial Catalog=LarcoOld;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
+        <!--<add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=192.168.1.1\compac;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />-->
     </connectionStrings>
     <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="System" logWarningsWhenNoCategoriesMatch="true">
         <listeners>
