--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -41,7 +41,9 @@
         <!--<add key="ICatalogDAO" value="BS.Common.Dao.Sql.CatalogSqlDAO, BSFramework" />-->
         <add key="PageInfo" value="BS.Common.Ajax.PageInfo, BSFramework" />
         <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />
-        <add key="CatalogCacheTables" value="tblClientes,tblProductos"/>        
+        <add key="CatalogCacheTables" value="tblClientes,tblProductos"/>
+        <add key="EPEFrameworkAppName" value="Larco" />
+        <add key="QueryHelper" value="BS.Common.Ajax.QueryHelper, BSFramework" />        
     </appSettings>
     <system.web>
         <customErrors mode="Off" />
