--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -58,7 +58,8 @@
             <allow users = "*" />
         </authorization>
         <httpHandlers>
-            <add verb="*" path="*.ashx" type="BS.Common.handler.AjaxController, Larco" />
+            <add verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
+            <add verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
         </httpHandlers>
         <httpRuntime maxUrlLength="40960" maxQueryStringLength="2097151" maxRequestLength="40960" />
     </system.web>
@@ -73,7 +74,9 @@
     <system.webServer>
         <handlers>
             <remove name="AjaxController" />
-            <add name="AjaxController" verb="*" path="*.ashx" type="BS.Common.handler.AjaxController, Larco" />
+            <remove name="AjaxDownloadHandler" />
+            <add name="AjaxController" verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
+            <add name="AjaxDownloadHandler" verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
         </handlers>
         <security>
             <requestFiltering>
